Bug 1899020 - Make selection.direction returns none when the selection is collapsed r=jjaschke,dom-core

Differential Revision: https://phabricator.services.mozilla.com/D211787